--- a/_posts/user_guide/0000-02-06-mobile.md
+++ b/_posts/user_guide/0000-02-06-mobile.md
@@ -11,7 +11,7 @@ category: 2
 
 It aims to become a full featured photo album replacement, including features like offline support, backup and sync etc.
 
-The app is currently in closed beta on the Google Play store. Contact me kurosavvas on (gitter)[https://gitter.im/uhuruphotos/] or (discord)[https://discord.gg/xwRvtSDGWb] for access.
+The app is currently in closed beta on the Google Play store. Contact me kurosavvas on [gitter](https://gitter.im/uhuruphotos/) or [discord](https://discord.gg/xwRvtSDGWb) for access.
 
 ## LibrePhotos Mobile
 
